
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned long get_value (int) ;
 int update_elem (int,unsigned long) ;
 int writemsg () ;

__attribute__((used)) static unsigned long
sendcmd(unsigned long op, unsigned long addr, unsigned long value) {
 update_elem(0, op);
 update_elem(1, addr);
 update_elem(2, value);
 writemsg();
 return get_value(2);
}
